# financial_math

./: .gitignore  main.py  pyproject.toml
finlibrary/src/: binomial_tree.py  random_walk.py  ticker.py
finlibrary/tests/: test_binomial_tree.py  test_random_walk.py  test_ticker.py
