[project]
name = "finlibrary"
version = "0.1.0"
description = "A financial math library with binomial tree and random walk models."
authors = [
    { name="Slim", email="academyofuselessideas@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"